--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
               <a class="nav-link active" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
+              <a class="nav-link" href="/about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact Us</a>
+              <a class="nav-link" href="/contact.html">Contact Us</a>
             </li>
             <li class="nav-item dropdown">
               <a
